# youtubeVideoDownloader

./: .gitignore  README.md  pyproject.toml  youtubeVideoDownloader.py
youtube_downloader/: gui.py  main.py  youtube_service.py
